--- a/123.css
+++ b/123.css
@@ -127,4 +127,19 @@ Times New Roman;
 	text-decoration: none;
 	display: inline-block;
 }
-
+.img1
+{
+	border-radius:8px;
+	border: 1px solid rgb(92, 8, 8);
+    padding: 5px;
+	width: 150px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.img2
+{
+	border-radius:20%;
+	border: 2px solid rgb(186, 189, 24);
+    padding: 5px;
+	width: 150px;
+	box-shadow: 0 4px 8px 0 rgba(95, 47, 47, 0.2), 0 6px 20px 0 rgba(175, 14, 14, 0.19);
+}
