--- a/123.css
+++ b/123.css
@@ -143,3 +143,28 @@ Times New Roman;
 	width: 150px;
 	box-shadow: 0 4px 8px 0 rgba(95, 47, 47, 0.2), 0 6px 20px 0 rgba(175, 14, 14, 0.19);
 }
+.t1
+{
+	color:green;
+	font-size: 20px;
+}
+.t2
+{
+	color:brown;
+	font-size: 20px;
+}
+.t3
+{
+	color:rgb(145, 135, 135);
+	font-size: 20px;
+}
+.t4
+{
+	color:yellowgreen;
+	font-size: 20px;
+}
+.t5
+{
+	color:rgb(177, 69, 83);
+	font-size: 20px;
+}
